FINALLY fixed the stupid UI problems. Yeah, bootstrap is awesome.

--- a/less/youtoo_tools.less
+++ b/less/youtoo_tools.less
@@ -164,3 +164,12 @@ a:hover {
     }
   }
 }
+
+.btn .glyphicon {
+  margin-right: 8px;
+  // vertical-align: middle;
+}
+
+.btn.btn-icon .glyphicon {
+  margin-right: 0;
+}
